[project]
name = "rl-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "together>=1.5.17",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers==4.48.0",
    "trl>=0.17.0",
]
